@@ -6,6 +6,9 @@
 	* Allow mounting a regular file (over a regular file) for
 	unprivleged users.
 
+	* Do not create temporary device file.  Require "/dev/fuse" to
+	exist, and be readable/writable by the mounting user.
+
 2005-06-02  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.3.0
